nginx 메인페이지 index.html으로 연결 시킴

--- a/srcs/nginx/default.conf
+++ b/srcs/nginx/default.conf
@@ -4,7 +4,7 @@ server {
 	server_name localhost;
 	# invalid name : server_name _;
 	# return 302 https://$server_name$request_uri;
-	root /var/www/html;
+	root /www;
 
 	# Add index.php to the list if you are using PHP
 	index index.html index.htmx index.nginx-debian.html index.php;
@@ -23,7 +23,7 @@ server {
 	server_name localhost;
 	# invalid name : server_name _;
 	# return 302 https://$server_name$request_uri;
-	root /var/www/html;
+	root /www;
 
 	# Add index.php to the list if you are using PHP
 	index index.html index.htmx index.nginx-debian.html index.php;
