--- a/srcs/nginx/dockerfile
+++ b/srcs/nginx/dockerfile
@@ -7,11 +7,18 @@ RUN 	apk add --no-cache nginx \
 				openssh
 
 # COPY	default.conf /etc/nginx/http.d/default.conf
-
+# nginx 사용자, 그룹 `www`만들기
+RUN	mkdir -p /run/nginx
+RUN adduser -D -g 'www' www
+# html파일용 디렉토리 만들기
+RUN mkdir /www
+RUN chown -R www:www /var/lib/nginx
+RUN chown -R www:www /www
+# 설정파일 복사
+COPY	./default.conf /etc/nginx/conf.d/default.conf
+COPY	index.html /www/index.html
 
 COPY	prevent_exit.sh /prevent_exit.sh
-COPY	./default.conf /etc/nginx/conf.d/default.conf
-RUN		mkdir -p /run/nginx
 # CMD		/usr/sbin/nginx 둘다 안되네
 # ENTRYPOINT		/usr/sbin/nginx 둘다 안되네
 CMD		/prevent_exit.sh
