--- a/srcs/wordpress/default.conf
+++ b/srcs/wordpress/default.conf
@@ -1,8 +1,8 @@
 server {
-	listen 5000 default_server;
-	listen [::]:5000 default_server;
+	listen 5050 default_server;
+	listen [::]:5050 default_server;
 
-	root /tmp/phpmyadmin; #root변경
+	root /tmp/wordpress;
 	index index.php;
 
 	location ~ [^/]\.php(/|$) {
