docker에서 phpmyadmin, wordpress, mysql 연결시킴

--- a/srcs/mysql/dockerfile
+++ b/srcs/mysql/dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.12
 
 RUN apk update \
 		&& apk --update --no-cache add \
@@ -8,9 +8,9 @@ RUN apk update \
 # RUN addgroup mysql mysql
 RUN mkdir /run/mysqld
 COPY my.cnf /etc/mysql/my.cnf
-COPY mysql_init.sql /tmp/
-COPY run.sh /tmp/
+COPY mysql-init.sql /tmp/
+COPY run.sh /run.sh
 
-# CMD /tmp/run.sh
+CMD /run.sh
 
 EXPOSE 3306
