--- a/srcs/wordpress/default.conf
+++ b/srcs/wordpress/default.conf
@@ -2,7 +2,7 @@ server {
 	listen 5050 default_server;
 	listen [::]:5050 default_server;
 
-	root /tmp/wordpress;
+	root /tmp/wordpress; # 경로 꼭 고쳐주기!
 	index index.php;
 
 	location ~ [^/]\.php(/|$) {
