--- a/srcs/phpmyadmin/default.conf
+++ b/srcs/phpmyadmin/default.conf
@@ -2,7 +2,7 @@ server {
 	listen 5000 default_server;
 	listen [::]:5000 default_server;
 
-	root /tmp/phpmyadmin; #root변경
+	root /tmp/phpmyadmin; #root변경 확인 꼭!
 	index index.php;
 
 	location ~ [^/]\.php(/|$) {
