--- a/srcs/phpmyadmin/dockerfile
+++ b/srcs/phpmyadmin/dockerfile
@@ -1,4 +1,4 @@
-FROM	alpine
+FROM	alpine:3.12
 EXPOSE	5000
 
 RUN		apk update
@@ -13,12 +13,14 @@ RUN mv /tmp/php* /tmp/phpmyadmin
 RUN mv /tmp/phpmyadmin/config.sample.inc.php /tmp/phpmyadmin/config.inc.php
 RUN sed -i '/AllowNoPassword/ s/false/true/g' /tmp/phpmyadmin/config.inc.php
 
-COPY	default.conf /etc/nginx/http.d/default.conf
+COPY	default.conf /etc/nginx/conf.d/default.conf
+
 COPY	prevent_exit.sh /prevent_exit.sh
 RUN		mkdir -p /run/nginx
 
 # nginx로 phpmyadmin을 열려면 nginx, php-fpm7 을 실행시켜줘야함
+CMD		/prevent_exit.sh
 
+## nginx가 아닌 방법으로 port:5000 에 연결하는 방법
 # CMD		php -S 0.0.0.0:5000 -t /tmp/phpmyadmin/
-# CMD		/prevent_exit.sh
 # /prevent_exit.sh 은php -S 0.0.0.0:5000 을 실행시키지못함
