--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -23,11 +23,11 @@ spec:
           name: http
         - containerPort: 443
           name: https
-        - containerPort: 22
-          name: ssh
-          livenessProbe: # 만약 kubectl exec deploy/nginx -- pkill sshd로 sshd 프로세스를 죽이면 컨테이너 재시작
-          initialDelaySeconds: 20
-          periodSeconds: 10
-          timeoutSeconds: 5
-          tcpSocket:
-            port: 22
+        # - containerPort: 22
+        #   name: ssh
+        #   livenessProbe: # 만약 kubectl exec deploy/nginx -- pkill sshd로 sshd 프로세스를 죽이면 컨테이너 재시작
+        #   initialDelaySeconds: 20
+        #   periodSeconds: 10
+        #   timeoutSeconds: 5
+        #   tcpSocket:
+        #     port: 22
