--- a/srcs/phpmyadmin/dockerfile
+++ b/srcs/phpmyadmin/dockerfile
@@ -12,6 +12,7 @@ RUN rm -rf /tmp/phpmyadmin.tar.gz
 RUN mv /tmp/php* /tmp/phpmyadmin
 RUN mv /tmp/phpmyadmin/config.sample.inc.php /tmp/phpmyadmin/config.inc.php
 RUN sed -i '/AllowNoPassword/ s/false/true/g' /tmp/phpmyadmin/config.inc.php
+RUN sed -i '/host/ s/localhost/mysql/g' /tmp/phpmyadmin/config.inc.php
 
 COPY	default.conf /etc/nginx/conf.d/default.conf
 
