--- a/srcs/wordpress/wordpress-service.yaml
+++ b/srcs/wordpress/wordpress-service.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: phpmyadmin
   annotations:
     metallb.universe.tf/allow-shared-ip: shared # 접근 가능한 클러스터 ip가 minikube ip 하나 이기때문에, 하나로 고정시켜야함
+  name: wordpress
   labels:
-    app: phpmyadmin
+    app: wordpress
 spec:
-  type: LoadBalancer
   selector:
-    app: phpmyadmin
+    app: wordpress
+  type: LoadBalancer
   ports:
-  - port: 5000
+    - port: 5050
+      name: wordpress
+      targetPort: 5050
