--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -19,15 +19,15 @@ spec:
         image: ft_nginx
         imagePullPolicy: Never
         ports:
-        - containerPort: 80
-          name: http
-        - containerPort: 443
-          name: https
-        # - containerPort: 22
-        #   name: ssh
-        #   livenessProbe: # 만약 kubectl exec deploy/nginx -- pkill sshd로 sshd 프로세스를 죽이면 컨테이너 재시작
+          - containerPort: 80
+            name: http
+          - containerPort: 443
+            name: https
+          - containerPort: 22
+            name: ssh
+        # livenessProbe: # ?? 만약 kubectl exec deploy/nginx -- pkill sshd로 sshd 프로세스를 죽이면 컨테이너 재시작
+        #   tcpSocket:
+        #     port: 22
         #   initialDelaySeconds: 20
         #   periodSeconds: 10
         #   timeoutSeconds: 5
-        #   tcpSocket:
-        #     port: 22
