--- a/srcs/nginx/nginx-service.yaml
+++ b/srcs/nginx/nginx-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: nginx
   annotations:
-    metallb.universe.tf/allow-shared-ip: shared
+    metallb.universe.tf/allow-shared-ip: shared # 접근 가능한 클러스터 ip가 minikube ip 하나 이기때문에, 하나로 고정시켜야함
   labels:
     app: nginx
 spec:
