--- a/srcs/nginx/dockerfile
+++ b/srcs/nginx/dockerfile
@@ -14,11 +14,13 @@ RUN ssh-keygen -f /etc/ssh/ssh_host_rsa_key -N '' -t rsa
 RUN ssh-keygen -f /etc/ssh/ssh_host_dsa_key -N '' -t dsa
 RUN mkdir -p /var/run/sshd
 
-# COPY	default.conf /etc/nginx/http.d/default.conf
+# ssl설정(=https 설정)
+# 관련 실행명령어는 ssl-setting.sh 에서 실행 되는 것으로 한다.
+
 # nginx 사용자, 그룹 `www`만들기
 RUN	mkdir -p /run/nginx
 RUN adduser -D -g 'www' www
-# html파일용 디렉토리 만들기
+# html 대문용 디렉토리 만들기
 RUN mkdir /www
 RUN chown -R www:www /var/lib/nginx
 RUN chown -R www:www /www
@@ -27,6 +29,11 @@ COPY	./default.conf /etc/nginx/conf.d/default.conf
 COPY	index.html /www/index.html
 
 COPY	prevent_exit.sh /prevent_exit.sh
+COPY	ssl-setting.sh /ssl-setting.sh
 # CMD		/usr/sbin/nginx 둘다 안되네
 # ENTRYPOINT		/usr/sbin/nginx 둘다 안되네
-CMD		/prevent_exit.sh
+
+CMD		/ssl-setting.sh; /prevent_exit.sh
+# 실행파일 두개 실행시키려면 다음과 같이 넘겨줘야한다.
+
+# ENTRYPOINT와 CMD의 조합으로는 두개의 실행파일 중 에서 뒤에 있는 실행파일을 인자로 인식해서 하나의 실행파일만 실행된다.
