--- a/srcs/phpmyadmin/dockerfile
+++ b/srcs/phpmyadmin/dockerfile
@@ -11,14 +11,18 @@ RUN tar -xzvf /tmp/phpmyadmin.tar.gz -C /tmp
 RUN rm -rf /tmp/phpmyadmin.tar.gz
 RUN mv /tmp/php* /tmp/phpmyadmin
 RUN mv /tmp/phpmyadmin/config.sample.inc.php /tmp/phpmyadmin/config.inc.php
+
+# config.inc.php 파일 수정
 RUN sed -i '/AllowNoPassword/ s/false/true/g' /tmp/phpmyadmin/config.inc.php
 RUN sed -i '/host/ s/localhost/mysql/g' /tmp/phpmyadmin/config.inc.php
+# RUN sed -i '/blowfish_secret/ s/ /whatareyoudoinglgl1234546560093563049dfklsgdl;fgdsfgddg/g' /tmp/phpmyadmin/config.inc.php
+RUN echo "\$cfg['TempDir'] = '/tmp';" >> /tmp/phpmyadmin/config.inc.php
 
 COPY	default.conf /etc/nginx/conf.d/default.conf
 
 COPY	prevent_exit.sh /prevent_exit.sh
 RUN		mkdir -p /run/nginx
-
+RUN		mkdir -p /tmp/phpmyadmin/tmp
 # nginx로 phpmyadmin을 열려면 nginx, php-fpm7 을 실행시켜줘야함
 CMD		/prevent_exit.sh
 
