--- a/srcs/ftps/dockerfile
+++ b/srcs/ftps/dockerfile
@@ -1,5 +1,11 @@
-FROM		alpine
+FROM		alpine:3.12
+# alpine:latest 에서는 apk add vsftpd에서 DNS look up error를 보임
+## ERROR: https://dl-cdn.alpinelinux.org/alpine/v3.13/main: DNS lookup error
+## WARNING: Ignoring https://dl-cdn.alpinelinux.org/alpine/v3.13/main: No such file or directory
+## ERROR: https://dl-cdn.alpinelinux.org/alpine/v3.13/community: DNS lookup error
+## WARNING: Ignoring https://dl-cdn.alpinelinux.org/alpine/v3.13/community: No such file or directory
 EXPOSE		21 20000-20003
+RUN			apk update
 RUN			apk add vsftpd openssl
 
 
