--- a/srcs/metallb/metallb-configmap.yaml
+++ b/srcs/metallb/metallb-configmap.yaml
@@ -9,5 +9,5 @@ data:
     - name: default
       protocol: layer2
       addresses:
-        # - 192.168.64.244-192.168.64.246
-        - 192.168.99.104-192.168.99.105
+        ADDRESSES
+        # - 192.168.99.105-192.168.99.106
