--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -1,6 +1,8 @@
-listen=YES
-listen_port=21
+listen=YES 
+# 둘 중 하나만
 listen_ipv6=NO
+# 둘 중 하나만
+listen_port=21
 write_enable=YES
 local_enable=YES
 force_local_data_ssl=YES
@@ -11,6 +13,7 @@ port_enable=NO
 pasv_enable=YES
 seccomp_sandbox=NO
 pasv_address=HOST_IP
+# pasv_address=__MINIKUBE_IP__ # 이건 의미없는 명령어 __MINIKUBE__IP 가 뭔지 모르겟음
 pasv_min_port=20000
 pasv_max_port=20003
 local_umask=022
