--- a/srcs/metallb/metallb-configmap.yaml
+++ b/srcs/metallb/metallb-configmap.yaml
@@ -10,4 +10,5 @@ data:
       protocol: layer2
       addresses:
         ADDRESSES
-        # - 192.168.99.105-192.168.99.106
+        # - 192.168.99.105-192.168.99.106 이런 형식
+        # 192.168.49.2 -> 에러 나올 수 있음 많이 불안함
