미니큐브 status 문제해결..2(커밋한번에 못하고 푸쉬함..)

--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -13,8 +13,8 @@ ssl_enable=YES
 port_enable=NO
 pasv_enable=YES
 seccomp_sandbox=NO
-pasv_address=HOST_IP
-# pasv_address=__MINIKUBE_IP__ # 이건 의미없는 명령어 __MINIKUBE__IP 가 뭔지 모르겟음
+# pasv_address=HOST_IP
+pasv_address=_EXTERNAL_IP
 pasv_min_port=20000
 pasv_max_port=20003
 local_umask=022
