subject에서 persistance 해야함

--- a/srcs/ftps/ftps-deployment.yaml
+++ b/srcs/ftps/ftps-deployment.yaml
@@ -23,22 +23,7 @@ spec:
           - containerPort: 20001
           - containerPort: 20002
           - containerPort: 20003
-        # envFrom:
-        # - secretRef:
-        #     name: account
-        # - secretRef:
-        #     name: host-ip
-      #   volumeMounts:
-      #   - name: vsftpd-persistent-storage
-      #     mountPath: /home
-      #   - name: vsftpd-config
-      #     subPath: vsftpd.conf
-      #     mountPath: /etc/vsftpd/vsftpd.conf
-      #     readOnly: true
-      # volumes:
-      # - name: vsftpd-persistent-storage
-      #   persistentVolumeClaim:
-      #     claimName: vsftpd-pv-claim
-      # - name: vsftpd-config
-      #   configMap:
-      #     name: vsftpd-config
+        livenessProbe:
+          initialDelaySeconds: 20
+          tcpSocket:
+            port: 21
