--- a/srcs/mysql/mysql-deployment.yaml
+++ b/srcs/mysql/mysql-deployment.yaml
@@ -20,10 +20,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3306
+          livenessProbe:
+            tcpSocket:
+              port: 3306
           volumeMounts:
           - name: mysql
             mountPath: /var/lib/mysql/ # !!! my.cnf를 보면 이 위치가 datadir로 설정되어서 데이터가 이 디렉토리에 저장된다는 걸 알 수 있다.
       volumes:
-      - name: mysql
-        persistentVolumeClaim:
-          claimName: mysql-pvc
+        - name: mysql
+          persistentVolumeClaim:
+            claimName: mysql-pvc
