--- a/srcs/nginx/nginx-deployment.yaml
+++ b/srcs/nginx/nginx-deployment.yaml
@@ -25,9 +25,8 @@ spec:
             name: https
           - containerPort: 22
             name: ssh
-        # livenessProbe: # ?? 만약 kubectl exec deploy/nginx -- pkill sshd로 sshd 프로세스를 죽이면 컨테이너 재시작
-        #   tcpSocket:
-        #     port: 22
-        #   initialDelaySeconds: 20
-        #   periodSeconds: 10
-        #   timeoutSeconds: 5
+        livenessProbe:
+          tcpSocket:
+            port: 22
+          initialDelaySeconds: 20
+
