--- a/srcs/monitoring-apps/grafana/Dockerfile
+++ b/srcs/monitoring-apps/grafana/Dockerfile
@@ -2,4 +2,4 @@ FROM		alpine
 EXPOSE		3000
 RUN			apk add grafana
 COPY		dashboards /usr/share/grafana/public/dashboards
-ENTRYPOINT	[ "/usr/sbin/grafana-server", "--homepath=/usr/share/grafana" ]
+ENTRYPOINT	[ "grafana-server", "--homepath=/usr/share/grafana"]
