--- a/srcs/monitoring-apps/telegraf/telegraf.conf
+++ b/srcs/monitoring-apps/telegraf/telegraf.conf
@@ -10,7 +10,7 @@ precision = ""
 hostname = ""
 omit_hostname = false
 [[outputs.influxdb]]
-urls = ["http://influxdb:8086"]
+urls = ["http://influxdb:8086"] # 이 주소가 어떻게 연결점이 되는 걸까?
 database = "telegraf"
 username = "root"
 password = "1"
