--- a/srcs/monitoring-apps/grafana/datasources.yaml
+++ b/srcs/monitoring-apps/grafana/datasources.yaml
@@ -10,7 +10,7 @@ apiVersion: 1
 # on what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-- name: InfluxDB
+- name: influxdb
   # <string, required> datasource type. Required
   type: influxdb
   # <string, required> access mode. direct or proxy. Required
@@ -19,6 +19,7 @@ datasources:
   orgId: 1
   # <string> url
   url: http://influxdb:8086
+  ################################################## 이 주소가 어떻게 연결점이 되는 걸까?
   # <string> database password, if used
   password: 1
   ############################################################################ 수정한 부분
