--- a/srcs/monitoring-apps/grafana/grafana-configmap.yaml
+++ b/srcs/monitoring-apps/grafana/grafana-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-config
+  name: grafana-configmap
 data:
   datasources.yaml: |
     # config file version
