pv 10Mi -> 250Mi, 기타 주석처리 수정

--- a/srcs/monitoring-apps/telegraf/telegraf.conf
+++ b/srcs/monitoring-apps/telegraf/telegraf.conf
@@ -10,7 +10,8 @@ precision = ""
 hostname = ""
 omit_hostname = false
 [[outputs.influxdb]]
-urls = ["http://influxdb:8086"] # 이 주소가 어떻게 연결점이 되는 걸까?
+urls = ["http://influxdb:8086"]
+# 이 주소가 어떻게 연결점이 되는 걸까? -> nginx.conf의 http://phpmyadmin:5000/;
 database = "telegraf"
 username = "root"
 password = "1"
