--- a/srcs/monitoring-apps/grafana/datasources.yaml
+++ b/srcs/monitoring-apps/grafana/datasources.yaml
@@ -10,7 +10,7 @@ apiVersion: 1
 # on what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-- name: influxdb
+- name: influxDB
   # <string, required> datasource type. Required
   type: influxdb
   # <string, required> access mode. direct or proxy. Required
