--- a/srcs/monitoring-apps/influxdb/influxdb-pv.yaml
+++ b/srcs/monitoring-apps/influxdb/influxdb-pv.yaml
@@ -4,7 +4,7 @@ kind: PersistentVolume
 metadata:
   name: influxdb-pv
   labels:
-    type: local
+    pv: influxdb
 spec:
   storageClassName: manual
   capacity:
