리디렉션 return value 맞추기

--- a/srcs/nginx/default.conf
+++ b/srcs/nginx/default.conf
@@ -1,7 +1,6 @@
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
-	return 301 https://$host$request_uri;
 	## server_name ${host}; # server_name에 환경변수를 할당하고 싶어!!!
 	## return 302 https://$server_name$request_uri; -> 같이 쓰게
 	root /www;
@@ -9,10 +8,33 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.html index.htmx index.nginx-debian.html index.php;
 
+	## 리디렉션 워드프레스로 하기
+	location /wordpress { 
+		# autoindex on;
+		return 307 http://$host:5050;
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		try_files $uri $uri/ =404;
+	}
+
+	location /index.php {
+		return 301 http://$host/phpmyadmin/;
+	}
+	## 리버스프록시 phpmyadmin으로 하기
+	location /phpmyadmin/ {
+		# proxy_set_header Host $host;
+		# proxy_set_header X-Real-IP $remote_addr;
+		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header X-Forwarded-Host $server_name;
+        	proxy_set_header X-Forwarded-Proto https;
+		proxy_pass http://phpmyadmin:5000/;
+	}
+
 	location / {
 		# autoindex on;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
+		return 301 https://$host$request_uri;
 		try_files $uri $uri/ =404;
 	}
 }
@@ -32,9 +54,6 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.html index.htmx index.nginx-debian.html index.php;
 
-	location /index.php {
-		return 301 http://$host/phpmyadmin/;
-	}
 	## 리디렉션 워드프레스로 하기
 	location /wordpress { 
 		# autoindex on;
@@ -44,6 +63,9 @@ server {
 		try_files $uri $uri/ =404;
 	}
 
+	location /index.php {
+		return 301 http://$host/phpmyadmin/;
+	}
 	## 리버스프록시 phpmyadmin으로 하기
 	location /phpmyadmin/ {
 		# proxy_set_header Host $host;
