--- a/srcs/nginx/default.conf
+++ b/srcs/nginx/default.conf
@@ -1,41 +1,20 @@
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
-	## server_name ${host}; # server_name에 환경변수를 할당하고 싶어!!!
-	## return 302 https://$server_name$request_uri; -> 같이 쓰게
+
 	root /www;
-
-	# Add index.php to the list if you are using PHP
 	index index.html index.htmx index.nginx-debian.html index.php;
-
 	## 리디렉션 워드프레스로 하기
+	return 301 https://$host$request_uri;
+	
+	## 얘는 동작을 안함...
 	location /wordpress { 
 		# autoindex on;
 		return 307 http://$host:5050;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
-	}
-
-	location /index.php {
-		return 301 http://$host/phpmyadmin/;
-	}
-	## 리버스프록시 phpmyadmin으로 하기
-	location /phpmyadmin/ {
-		# proxy_set_header Host $host;
-		# proxy_set_header X-Real-IP $remote_addr;
-		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		# proxy_set_header X-Forwarded-Host $server_name;
-        	proxy_set_header X-Forwarded-Proto https;
-		proxy_pass http://phpmyadmin:5000/;
-	}
-
-	location / {
-		# autoindex on;
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		return 301 https://$host$request_uri;
-		try_files $uri $uri/ =404;
+		# 얘를 없애볼까?
+		# try_files $uri $uri/ =404;
 	}
 }
 
@@ -46,21 +25,21 @@ server {
 	# invalid name : server_name _;
 	# return 302 https://$server_name$request_uri;
 	root /www;
+	index index.html index.htmx index.nginx-debian.html index.php;
 	# include /etc/nginx/snippets/self-signed.conf;
 	# include /etc/nginx/snippets/ssl-params.conf;
 	# listen on ssl;
 	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
 	ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 	# Add index.php to the list if you are using PHP
-	index index.html index.htmx index.nginx-debian.html index.php;
 
-	## 리디렉션 워드프레스로 하기
 	location /wordpress { 
 		# autoindex on;
 		return 307 http://$host:5050;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
+		# 얘를 없애볼까?
+		# try_files $uri $uri/ =404;
 	}
 
 	location /index.php {
