nginx에서 wordpress로 리디렉션 307로 이동하도록 수정함

--- a/srcs/nginx/default.conf
+++ b/srcs/nginx/default.conf
@@ -4,8 +4,6 @@ server {
 
 	root /www;
 	index index.html index.htmx index.nginx-debian.html index.php;
-	## 리디렉션 워드프레스로 하기
-	return 301 https://$host$request_uri;
 	
 	## 얘는 동작을 안함...
 	location /wordpress { 
@@ -15,6 +13,11 @@ server {
 		# as directory, then fall back to displaying a 404.
 		# 얘를 없애볼까?
 		# try_files $uri $uri/ =404;
+	}
+
+	# 443 포트로 리디렉션하는 것을 server 블록의 마지막에 두지말고, location으로 감싼다면 원하는 리디렉션이 가능했다.
+	location / { 
+		return https://$host$request_uri;
 	}
 }
 
